--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-name: Edwin E. Exemplar
-email: edwin+contactme@someemail.com
+name: Joab Goh
+email: joabgoh123@gmail.com
 #canonical_url: https://edwinexemplar.com
 keywords: "Software Engineer, Python, Ruby, Machine Learning, Deep Learning, Startups, Agile, Pair Programming"
 skills: "Senior Software Engineer in Seattle, WA (Fictitious)"
@@ -10,11 +10,11 @@ baseurl:
 # You should replace these with your social networks, of course. :)
 social:
   - title: linkedin
-    url: https://www.linkedin.com/in/cgroom/
-  - title: medium
-    url: https://medium.com/@cgroom
-  - title: twitter
-    url: https://twitter.com/chuck_groom
+    url: https://www.linkedin.com/in/joab-goh-685427192/
+  # - title: medium
+  #   url: https://medium.com/@cgroom
+  # - title: twitter
+  #   url: https://twitter.com/chuck_groom
     
 # Google webmaster tools
 google_verify:
