--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ baseurl:
 social:
   - title: linkedin
     url: https://www.linkedin.com/in/joab-goh-685427192/
-  # - title: medium
-  #   url: https://medium.com/@cgroom
+  - title: github
+    url: https://github.com/joabgoh123/
   # - title: twitter
   #   url: https://twitter.com/chuck_groom
     
